--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -1,62 +1,69 @@
-<h2 class="head-line title_h2 text-center">ショッピングカート</h2>
-<div calss="row">
-  <div class="col-xs-11" >
-    <div class="pull-right margin-bottom">
-    <%= link_to "カートを空にする", cart_products_destroy_all_path, method: :delete, class: "btn btn-danger d-inline ml-auto" %>
+<div class="container my-5">
+    <div class="row mb-3">
+      <div class="col-md-4 offset-md-1">
+
+      </div>
     </div>
-    <table class="table table-hover table-bordered">
-      <thead>
-        <tr class="info">
-
-          <th>商品名</th>
-          <th>単価(税込)</th>
-          <th>数量</th>
-          <th>小計</th>
-          <th></th>
-        </tr>
-      </thead>
-
-      <tbody>
-      <% @sum = 0 %>
-      <% @cart_products.each do |cart_product| %>
-        <tr>
-          <td>
-               <%= cart_product.product.name %><%= attachment_image_tag cart_product.product, :image, size: "60x40" %>
-
-          </td>
-          <td><%= (cart_product.product.price * 1.1).to_i  %>円</td>
-          <td>
-            <%= form_with url: cart_product_path(cart_product.id), model: cart_product, local: true do |f| %>
-            <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10], class: 'form-control' %>
-            <%= f.submit "変更", class: "btn-sm btn-success" %>
+    <div class="row justify-content-between">
+      <div class="col-md-4 mb-2">
+        <h4 class="bg-light text-center">ショッピングカート</h4>
+      </div>
+      <div class="col-md-3 offset-md-5 text-right">
+        <%= link_to "カートを空にする", cart_products_destroy_all_path, method: :delete, class:"btn btn-danger" %>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col-md-12">
+        <table class="table-bordered">
+          <thead class="cart-head">
+            <tr>
+              <th>商品名</th>
+              <th>単価（税込）</th>
+              <th>数量</th>
+              <th>小計</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+          <% @sum = 0 %>
+          <% @cart_products.each do |cart_product| %>
+              <tr>
+                <td><%= (attachment_image_tag cart_product.product, :image, fallback: "no_image.jpg", size: "50x50" ) %><%= cart_product.product.name %></td>
+                <td><%= (cart_product.product.price * 1.08).to_i.to_s(:delimited)  %>円</td>
+                <td align="center" valign="middle">
+                <%= form_with url: cart_product_path(cart_product.id), model: cart_product, local: true do |f| %>
+                    <div class="form-group" style="margin: 0px;">
+                      <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10], class: 'form-control' %>
+                      <%= f.submit '変更', class:"btn btn-success"%>
+                    </div>
+                <% end %>
+                </td>
+                <td><%= (cart_product.product.price * cart_product.amount * 1.08).to_i.to_s(:delimited)  %></td>
+                <% @sum += (cart_product.product.price * cart_product.amount * 1.08 ).to_i  %>
+                <td align="center" valign="middle"><%= link_to "削除する", cart_product_path(cart_product.id), method: :delete, class:"btn btn-danger" %></td>
+              </tr>
             <% end %>
-          </td>
-
-          <td><%= (cart_product.product.price * cart_product.amount * 1.1).to_i  %>円</td>
-          <% @sum += (cart_product.product.price * cart_product.amount * 1.1 ).to_i  %>
-          <td><%= link_to '削除する', cart_product_path(cart_product.id), method: :delete, class: "btn btn-danger" %></td>
-        </tr>
-     <% end %>
-      </tbody>
-    </table>
-    <div class="col-xs-9 margin-bottom">
+          </tbody>
+        </table>
+      </div>
     </div>
-
-    <div class="col-xs-3 pull-right billing">
-      <table class="table table-bordered text-right">
-        <thead>
-          <tr>
-            <td class="warning">合計金額</td>
-            <td><%= @sum %>円</td>
-            <td class="text-right" id='total_price'>
-            </td>
+    <div class="row mt-4">
+      <div class="col-md-3"><%= link_to '買い物を続ける', products_path, class:"btn btn-primary" %></div>
+      <div class="col-md-4 offset-md-5">
+        <table class="table-bordered">
+          <tr class="total-amount">
+            <td>合計金額</td><td><%= @sum.to_s(:delimited) %>円</td>
           </tr>
-        </thead>
-      </table>
+        </table>
+      </div>
     </div>
-    <div class="col-md-4 col-md-offset-4 text-center">
-      <%= link_to " 買い物を続ける", products_path, class: "glyphicon glyphicon-shopping-cart btn btn-info" %>
-      <%= link_to " 情報入力に進む", new_order_path,  class: "glyphicon glyphicon-pencil btn btn-success center-block" %>
-    </div>
+  <div class="text-center">
+    <%= link_to '情報入力に進む', new_order_path, class:"btn btn-success mt-5" %>
   </div>
 </div>
+
+
+
+
+
+
