--- a/app/views/public/orders/thanks.html.erb
+++ b/app/views/public/orders/thanks.html.erb
@@ -1,2 +1,5 @@
-<h1>Orders#thanks</h1>
-<p>Find me in app/views/orders/thanks.html.erb</p>
+<div class="container">
+  <div class="text-center complete-thanks">
+      <h1 class="text-center">ご注文ありがとうございました！</h1>
+  </div>
+</div>
