--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -29,8 +29,8 @@
           <th>注文ステータス</th>
           <td>
             <%= form_with(model: @order, url: admin_order_path, local: true) do |f| %>
-              <%= f.select :order_status, [["入金待ち"],["入金確認"] ,["製作中"],["発送準備中"],["発送済"]] %>
-              <%= f.submit "更新", class: "btn btn-success", style: "margin-left: 30px;" %>
+              <%= f.select :order_status, Order.order_statuses.keys.to_a %>
+              <%= f.submit "更新", class: "btn btn-success" %>
             <% end %>
           </td>
         </tr>
@@ -60,9 +60,9 @@
               <% @sum += (order_detail.subtotal * order_detail.amount * 1.1 ).to_i  %>
               <td>
                 <%= form_with(model: order_detail, url: admin_order_detail_path(order_detail),local: true) do |f| %>
-                 <%= f.select :production_status, [["製作不可"],["製作待ち"] ,["製作中"],["製作完了"]] %>
-                 <%= f.submit "更新", class: "btn btn-success", style: "margin-left: 30px;" %>
-               <% end %>
+                  <%= f.select :production_status, OrderDetail.production_statuses.keys.to_a %>
+                  <%= f.submit "更新", class: "btn btn-success" %>
+                <% end %>
               </td>
             </tr>
           <% end %>
