--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,130 +1,103 @@
-<div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-10 px-5 px-sm-0">
-   <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
-   <%= render "customers/shared/error_messages", resource: resource %>
-      <div class="d-inline-block m-5">
-        <h4 class="px-3 font-weight-bold">新規会員登録</h4>
+<div class="container">
+  <div class="row">
+    <div class="col-md">
+      <h3 class="signuptitle">新規会員登録</h3>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <table>
+          <%= render "public/customers/shared/error_messages", resource: resource %>
+          <tr>
+             <div class="form-group">
+                <th><label class="control-label col-xs-2">名前</label></th>
+                <td>（姓）</td>
+                <td><%= f.text_field :last_name, autofocus: true, class: "form-control" %></td>
+                <td>（名）</td>
+                <td><%= f.text_field :first_name, autofocus: true, class: "form-control"%></td>
+              </div>
+          </tr>
+          <tr>
+            <div class="form-group">
+              <th><label class="control-label col-xs-2">フリガナ</label></th>
+              <td>（セイ）</td>
+              <td><%= f.text_field :last_name_kana, autofocus: true, class: "form-control"  %></td>
+              <td>（メイ）</td>
+              <td><%= f.text_field :first_name_kana, autofocus: true, class: "form-control" %></td>
+            </div>
+          </tr>
+          <tr>
+            <div class="form-group">
+              <th><label class="control-label col-xs-2">メールアドレス</label></th>
+              <td></td>
+              <td><%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %></td>
+              <td></td>
+            </div>
+          </tr>
+          <tr>
+            <div class="form-group">
+              <th><label class="control-label col-xs-2">郵便番号</label></th>
+              <td></td>
+              <td><%= f.text_field :postal_code, autofocus: true, class: "form-control"  %></td>
+              <td></td>
+            </div>
+          </tr>
+          <tr>
+            <div class="form-group">
+              <th><label class="control-label col-xs-2">住所</label></th>
+              <td></td>
+              <td colspan="4"><%= f.text_field :address, autofocus: true, class: "form-control" %></td>
+            </div>
+          </tr>
+          <tr>
+            <div class="form-group">
+              <th><label class="control-label col-xs-2">電話番号(ハイフンなし）</label></th>
+              <td></td>
+              <td><%= f.text_field :telephone_number, autofocus: true, class: "form-control" %></td>
+              <td></td>
+            </div>
+          </tr>
+          <tr>
+            <div class="form-group">
+              <th><label class="control-label col-xs-2">パスワード(６文字以上)</label></th>
+              <td></td>
+              <td><%= f.password_field :password, autocomplete: "new-password", class: "form-control" %></td>
+              <td></td>
+            </div>
+          </tr>
+          <tr>
+            <div class="form-group">
+              <th><label class="control-label col-xs-2">パスワード(確認用)</label></th>
+              <td></td>
+              <td><%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %></td>
+              <td></td>
+            </div>
+          </tr>
+          <tr>
+            <th></th>
+            <td></td>
+            <td><%= f.submit "新規登録", class: 'btn btn-primary'%></td>
+            <td></td>
+          </tr>
+        </table>
+      <% end %>
+
+      <div class="row-signuptext">
+        <%- if controller_name != 'sessions' %>
+        <h8>既に登録済みの方</h8>
       </div>
-        <!--氏名入力フォーム-->
-      <div class="d-flex flex-row mt-1">
-        <div class="title">
-          <p>名前</p>
-        </div>
-
-        <div class="d-flex ">
-          <%= f.label :"(姓)", class:"label" %>
-          <%= f.text_field :last_name, autofocus: true, autocomplete:"last_name", class:'form form-control' %>
-        </div>
-        <div class="d-flex">
-          <%= f.label :"(名)", class:"label" %>
-          <%= f.text_field :first_name, autofocus: true, autocomplete:"first_name", class:'form2 form-control' %>
-        </div>
+      <div class="row">
+        <div class="col-1"></div>
+        <%= link_to "こちら", new_customer_session_path %>　からログインしてください。
+        <% end %>
       </div>
-
-      <div class="d-flex flex-row mt-1">
-        <div class="title">
-          <p>フリガナ</p>
-        </div>
-
-        <div class="d-flex ">
-          <%= f.label :"(セイ)", class:"label" %>
-          <%= f.text_field :last_name_kana, autofocus: true, autocomplete:"last_name", class:'form form-control' %>
-        </div>
-        <div class="d-flex">
-          <%= f.label :"(メイ)", class:"label" %>
-          <%= f.text_field :first_name_kana, autofocus: true, autocomplete:"first_name", class:'form2 form-control' %>
-        </div>
-      </div>
-
-      <div class="d-flex flex-row mt-1">
-        <div class="title">
-          <p>メールアドレス</p>
-        </div>
-
-        <div class="d-flex ">
-          <%= f.label :" ", class:"label" %>
-          <%= f.text_field :email, autofocus: true, autocomplete:"email", class:'form form-control' %>
-        </div>
-      </div>
-
-      <div class="d-flex flex-row mt-1">
-        <div class="title">
-          <p>郵便番号(ハイフンなし)</p>
-        </div>
-
-        <div class="d-flex ">
-          <%= f.label :" ", class:"label" %>
-          <%= f.text_field :postal_code, autofocus: true, autocomplete:"postal_code", class:'form form-control' %>
-        </div>
-      </div>
-
-      <div class="d-flex flex-row mt-1">
-        <div class="title">
-          <p>住所</p>
-        </div>
-
-        <div class="d-flex ">
-          <%= f.label :" ", class:"label" %>
-          <%= f.text_field :address, autofocus: true, autocomplete:"address", class:'form3 form-control' %>
-        </div>
-      </div>
-
-      <div class="d-flex flex-row mt-1">
-        <div class="title">
-          <p>電話番号(ハイフンなし)</p>
-        </div>
-
-        <div class="d-flex ">
-          <%= f.label :" ", class:"label" %>
-          <%= f.text_field :telephone_number, autofocus: true, autocomplete:"telephone_number", class:'form form-control' %>
-        </div>
-      </div>
-
-      <div class="d-flex flex-row mt-1">
-        <div class="title">
-          <p>パスワード(6文字以上)</p>
-        </div>
-
-        <div class="d-flex ">
-          <%= f.label :" ", class:"label" %>
-          <% if @minimum_password_length %>
-          <% end %>
-          <%= f.password_field :password, autofocus: true, autocomplete:"new-password", class:'form form-control' %>
-        </div>
-      </div>
-
-      <div class="d-flex flex-row mt-1">
-        <div class="title">
-          <p>パスワード(確認用)</p>
-        </div>
-
-        <div class="d-flex ">
-          <%= f.label :" ", class:"label" %>
-          <%= f.password_field :password_confirmation, autofocus: true, autocomplete:"new-password", class:'form form-control' %>
-        </div>
-      </div>
-
-      <div class="d-flex flex-row mt-1">
-        <div class="title">
-          <p></p>
-        </div>
-
-        <div class="d-flex">
-          <%= f.label :" ", class:"label" %>
-          <button type="submit" class="btn btn-success btn-block btn-size">新規登録</button>
-        </div>
-      </div>
-
-    <% end %>
-
-      <div class="d-inline-block mx-3 mt-3 mb-2">
-        <h6 class="px-3 font-weight-bold", style="background-color: #eaf4fc">既に登録済みの⽅</h6>
-      </div>
-      <p><%= link_to "こちら", new_customer_session_path, class:"mx-3 pl-5" %>からログインしてください。</p>
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
 
 
 
