--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-warning p-1">
     <div class="container">
-      <% if admin_signed_in? %>
-        <a class="navbar-brand" href="/admin"><span style="font-size: 30px">NaganoCake</span></a> 　　<!--後でLOGO画像入れます-->
-      <% else %>
-        <a class="navbar-brand" href="/"><span style="font-size: 30px">NaganoCake</span></a>
-      <% end %>
+      <a class="navbar-brand" href="/"><span style="font-size: 30px">NaganoCake</span></a> 　　<!--後でLOGO画像入れます-->
 
       <nav>
         <ul class="nav navbar-nav navbar-right ml-auto bg p-4">
