--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -54,7 +54,7 @@
       <%= link_to '編集する', edit_admin_customer_path(@customers.id), class: 'btn btn-success' %>
     </div>
     <div class="col-3">
-      <%= link_to '注文履歴一覧を見る', admin_order_path(@customers.id), class: 'btn btn-primary' %>
+      <%= link_to '注文履歴一覧を見る', admin_root_path, class: 'btn btn-primary' %>
     </div>
   </div>
 </div>
